--- a/conf/last/config
+++ b/conf/last/config
@@ -1,4 +1,4 @@
-working_dir = "test"
+working_dir = "/net/s34data/export/34idc-data/2018"
 data_dir = "/net/s34data/export/34idc-data/2018/Chung1118/ADChung1118a"
 specfile = "/net/s34data/export/34idc-data/2018/Chung1118/Chung1118a.spec"
 darkfile = "/net/s34data/export/34idc-work/2018/Chung1118/dark.tif"
