--- a/conf/last/config
+++ b/conf/last/config
@@ -1,5 +1,7 @@
-working_dir = "test"
-data_dir = "/net/s34data/export/34idc-data/2018/Chung1118/ADChung1118a"
-specfile = "/net/s34data/export/34idc-data/2018/Chung1118/Chung1118a.spec"
-darkfile = "/net/s34data/export/34idc-work/2018/Chung1118/dark.tif"
-whitefile = "/net/s34data/export/34idc-work/2018/Chung1118/CelaWhiteField.tif"
+working_dir = "/local/bfrosik/cdi/test"
+data_dir = "/net/s34data/export/34idc-data/2019/Staff19-1/ADStaff19-1a"
+specfile = "/net/s34data/export/34idc-data/2019/Staff19-1/Staff19-1a.spec"
+darkfile = "/net/s34data/export/34idc-work/2019/dark.tif"
+whitefile = "/net/s34data/export/34idc-work/2019/CelaWhiteField.tif"
+auto_correct = "False"
+exclude_scans = "88,91"
