Added configuration verification added load configuration of each tab added set experiment button change priority of config_disp parameters, the spec parsed parameters can be overridden by configured

--- a/config
+++ b/config
@@ -5,5 +5,5 @@ working_dir = "/local/bfrosik/cdi/test"
 experiment_id = ab
                                             // a string id
 
-scans = 2-7
+scan = 2-7
                                             // a single number or a range defining scans, optional
