--- a/conf/config
+++ b/conf/config
@@ -1,8 +1,9 @@
+// This configuration contains parameters defining the experiment
 working_dir = "/local/bfrosik/cdi/test"
-data_dir = "/net/s34data/export/34idc-data/2019/Staff19-1/ADStaff19-1a"
-specfile = "/net/s34data/export/34idc-data/2019/Staff19-1/Staff19-1a.spec"
-darkfile = "/net/s34data/export/34idc-work/2019/dark.tif"
-whitefile = "/net/s34data/export/34idc-work/2019/CelaWhiteField.tif"
-exclude_scans = (78,81)
-min_files = 80
-det_quad = 1
+                                            // working directory; the new experiment will
+                                            // be created in this directory
+experiment_id = ab
+                                            // a string id
+
+scan = 2-7
+                                            // a single number or a range defining scans, optional
